Fix bgcolor not applying to dark mode extensions

--- a/foundations/odin-recipes/style.css
+++ b/foundations/odin-recipes/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     background-color: oklch(21% 0.034 264.665);
 }
 h1 {
